[package]
name = "planets"
version = "0.1.0"
authors = ["Evan Almloff"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.15.0"

serde = { version = "1", features = ["derive"], optional = true }

getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.4"

[features]
default = []
persistence = ["eframe/persistence", "serde"]

# [profile.release]
# opt-level = 2 # fast and small wasm

# building is optimized, but slow
[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true


[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
